engine_error.log
Traceback (most recent call last):
  File "/mnt/c/Users/obolo/Downloads/vortex/core/engine.py", line 100, in _safe_import
    self.user_module = importlib.import_module(self.entry_name)
  File "/usr/lib/python3.10/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1050, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1027, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1006, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 688, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 879, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/mnt/c/Users/obolo/Downloads/vortex/app.py", line 2
    print("Hi" from kern!")
                         ^
SyntaxError: unterminated string literal (detected at line 2)
